--- a/src/EfRepository/EfRepository.csproj
+++ b/src/EfRepository/EfRepository.csproj
@@ -4,10 +4,11 @@
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <RootNamespace>MyAppRoot.EfRepository</RootNamespace>
+        <RootNamespace>MyApp.EfRepository</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="ErikEJ.EntityFrameworkCore.SqlServer.DateOnlyTimeOnly" />
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
