--- a/src/LocalRepository/LocalRepository.csproj
+++ b/src/LocalRepository/LocalRepository.csproj
@@ -4,7 +4,7 @@
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <RootNamespace>MyAppRoot.LocalRepository</RootNamespace>
+        <RootNamespace>MyApp.LocalRepository</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
