--- a/src/WebApp/WebApp.csproj
+++ b/src/WebApp/WebApp.csproj
@@ -9,37 +9,51 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="LigerShark.WebOptimizer.Core" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" />
-        <PackageReference Include="Microsoft.Identity.Web" />
-        <PackageReference Include="Microsoft.Web.LibraryManager.Build" />
-        <PackageReference Include="Mindscape.Raygun4Net.AspNetCore" />
-        <PackageReference Include="NetEscapades.AspNetCore.SecurityHeaders" />
+        <PackageReference Include="LigerShark.WebOptimizer.Core"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer"/>
+        <PackageReference Include="Microsoft.Identity.Web"/>
+        <PackageReference Include="Microsoft.Web.LibraryManager.Build"/>
+        <PackageReference Include="Mindscape.Raygun4Net.AspNetCore"/>
+        <PackageReference Include="NetEscapades.AspNetCore.SecurityHeaders"/>
         <PackageReference Include="SonarAnalyzer.CSharp">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
-        <PackageReference Include="Swashbuckle.AspNetCore" />
+        <PackageReference Include="Swashbuckle.AspNetCore"/>
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\LocalRepository\LocalRepository.csproj" />
-        <ProjectReference Include="..\EfRepository\EfRepository.csproj" />
+        <ProjectReference Include="..\LocalRepository\LocalRepository.csproj"/>
+        <ProjectReference Include="..\EfRepository\EfRepository.csproj"/>
     </ItemGroup>
 
     <ItemGroup>
-        <Content Update="appsettings.Development.json" CopyToPublishDirectory="Never">
+        <Content Update="appsettings.Development.json">
             <DependentUpon>appsettings.json</DependentUpon>
+            <CopyToPublishDirectory>Never</CopyToPublishDirectory>
         </Content>
+        <Content Update="libman.json">
+            <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+            <CopyToPublishDirectory>Never</CopyToPublishDirectory>
+            <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+        </Content>
+        <None Update="Properties\PublishProfiles\*.pubxml">
+            <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+            <CopyToPublishDirectory>Never</CopyToPublishDirectory>
+            <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+        </None>
     </ItemGroup>
 
     <ItemGroup>
-      <None Update="Properties\PublishProfiles\Example-Server.pubxml">
-        <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-        <CopyToPublishDirectory>Never</CopyToPublishDirectory>
-        <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
-      </None>
+        <MsDeploySkipRules Include="SkipAppSettings">
+            <ObjectName>filePath</ObjectName>
+            <AbsolutePath>appsettings.*.json</AbsolutePath>
+        </MsDeploySkipRules>
+        <MsDeploySkipRules Include="SkipWebConfig">
+            <ObjectName>filePath</ObjectName>
+            <AbsolutePath>web.config</AbsolutePath>
+        </MsDeploySkipRules>
     </ItemGroup>
 
 </Project>
